# MLOps-Project

.github/: CI_CD_SETUP_GUIDE.md  CI_CD_SUMMARY.md  GITOPS_TEMPLATE.md  README.md
.github/workflows/: README.md  ci-cd.yaml
app/: .dockerignore  BUILD_SUCCESS.md  DOCKER_CHANGES_SUMMARY.md  DOCKER_GUIDE.md  DOCKER_README.md  Dockerfile  Dockerfile.optimized  ENVIRONMENT_VARIABLES.md  ENV_FLOW_DIAGRAM.md  ENV_QUICK_REF.md  ENV_SUMMARY.txt  FINAL_STATUS.md  JAVA_VERSION_NOTE.md  META_TENSOR_FIX.md  QUICK_START.md  app.py  app_requirements.txt  app_requirements_docker.txt  check_health.sh  codebuggy_requirements.txt  codebuggy_requirements_docker.txt  docker-build.sh  docker-compose.yml  download_models.py  inference.py  requirements.txt  run_app.sh  test-docker.sh
app/static/css/: style.css
app/static/js/: app.js
app/templates/: examples.html  index.html
app/utils/: build_graph.py  gumtree_diff.py
docs/: 00-OVERVIEW.md  01-DAY1-CORE-PIPELINE.md  02-DAY2-DEPLOY-MONITORING.md  03-DAY3-KUBEFLOW-DRIFT.md  04-SUMMARY.md  05-NETWORK-DIAGRAM.md  ACADEMIC-REPORT.md  CODEBUGGY-MLFLOW-GUIDE.md  CODEBUGGY-QUICKSTART.md  DAY1-COMPLETED.md
k8s/mlflow/: deployment.yaml  pvc.yaml  service.yaml
untitled folder/: codebuggy-clf.ipynb  codebuggy-infer.ipynb  codebuggy.ipynb  codebuggy_example.py  codebuggy_infer_mlflow.py  codebuggy_train_mlflow.py  parsed_examples.json  preprocess-codebuggy.ipynb  pyproject.toml  rgcn.ipynb  tmp.ipynb
untitled folder/output/: node_type_to_id.joblib
untitled folder/utils/: gumtree_diff.py
