[project]
name = "codebuggy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "codebleu==0.7.0",
    "datasets>=4.4.2",
    "javalang>=0.13.0",
    "mlflow>=3.8.1",
    "pip>=25.3",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
    "transformers>=4.57.5",
    "tree-sitter==0.22.0",
    "tree-sitter-java==0.21",
]
